--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -27,7 +27,7 @@
         </div>
 
         <div class="executive-summary" itemprop="description">
-          <p>NO 滑稽  NO LIFE </p>
+          <p>滑稽树上滑稽果，滑稽树下你和我，滑稽树前做游戏，滑稽多又多</p>
         </div>
 
         {% if site.resume_looking_for_work == 'yes' %}
@@ -209,13 +209,12 @@
       <section class="content-section">
 
         <header class="section-header">
-          <h2>Additional Links</h2>
+          <h2>友情链接</h2>
         </header>
 
         <div class="resume-item">
           <ul class="resume-item-list">
-            <li><a href="#">Springfield Poker Club</a></li>
-            <li><a href="#">Springfield Donut Eater's User Group</a></li>
+            <li><a href="http://tieba.baidu.com/f?kw=%BB%AC%BB%FC&fr=ala0&tpl=5">Springfield Poker Club</a></li>
           </ul>
         </div>
 
