再来一发毒瘤滑稽

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -214,7 +214,7 @@
 
         <div class="resume-item">
           <ul class="resume-item-list">
-            <li><a href="http://tieba.baidu.com/f?kw=%BB%AC%BB%FC&fr=ala0&tpl=5">Springfield Poker Club</a></li>
+            <li><a href="http://tieba.baidu.com/f?kw=%BB%AC%BB%FC&fr=ala0&tpl=5">百度滑稽吧</a></li>
           </ul>
         </div>
 
