--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -44,7 +44,7 @@
       <section class="content-section">
 
         <header class="section-header">
-          <h2>Experience</h2>
+          <h2>番剧推荐</h2>
         </header>
 
         <!-- Duplicate these resume-item elements and edit accordingly for each job you want to add here -->
@@ -86,7 +86,7 @@
       <section class="content-section">
 
         <header class="section-header">
-          <h2>Education</h2>
+          <h2>单身狗の七夕日常</h2>
         </header>
 
         <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/CollegeOrUniversity">
@@ -104,7 +104,7 @@
       <section class="content-section">
 
         <header class="section-header">
-          <h2>Projects</h2>
+          <h2>极楽浄土</h2>
         </header>
 
         <div class="resume-item">
@@ -128,7 +128,7 @@
       <section class="content-section">
 
         <header class="section-header">
-          <h2>Skills</h2>
+          <h2>滑♂稽</h2>
         </header>
 
         <div class="resume-item">
@@ -155,7 +155,7 @@
       <section class="content-section">
 
         <header class="section-header">
-          <h2>Recognition</h2>
+          <h2>图集下载</h2>
         </header>
 
         <div class="resume-item">
@@ -185,7 +185,7 @@
       <section class="content-section">
 
         <header class="section-header">
-          <h2>Associations</h2>
+          <h2>滑♂稽表情包</h2>
         </header>
 
         <div class="resume-item">
