--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -209,7 +209,7 @@
       <section class="content-section">
 
         <header class="section-header">
-          <h2>友情链接</h2>
+          <h2>新世界的大门[慎点]</h2>
         </header>
 
         <div class="resume-item">
