--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -107,17 +107,13 @@
           <h2>极楽浄土</h2>
         </header>
 
-        <div class="resume-item">
-          <h3 class="resume-item-title"><a href="http://donutlocator.io">donutfinder.io</a></h3>
-          <h4 class="resume-item-details">Founder & Primary Developer &bull; 2012 &mdash; Present</h4>
-          <p class="resume-item-copy">Donut Locator is an open source node/ember app that lets users find donuts within a defined radius from their home.</p>
-        </div>
-
-        <div class="resume-item">
-          <h3 class="resume-item-title">Springfield Donut Eater's User Group</h3>
-          <h4 class="resume-item-details">Co-Founder & Organizer &bull; 2007 &mdash; Present</h4>
-          <p class="resume-item-copy">DEUG is a local monthly meetup in Springfield where we share all the latest tips and tricks for dat donut lifestyle. I organize the group, and typically eat most of the donuts.</p>
-        </div>
+        <div>
+          <a href="http://www.bilibili.com/video/av5562406/">极乐净土——楪祈</a>
+          <a href="http://www.bilibili.com/video/av5529405/">极乐净土——V家3人</a>
+          <a href="http://www.bilibili.com/video/av5598273/">极乐净土——金丝雀旗袍V家</a>
+          <a href="http://www.bilibili.com/video/av5648647/">极乐净土——圆神 伊莉雅 小暗 咲夜 克鲁鲁</a>
+          <a href="http://www.bilibili.com/video/av5386762/">极乐净土——saber狮子王</a>
+       </div>
 
       </section>
       <!-- end Projects -->
