--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -109,9 +109,17 @@
 
         <div>
           <a href="http://www.bilibili.com/video/av5562406/">极乐净土——楪祈</a>
+        </div>
+        <div>
           <a href="http://www.bilibili.com/video/av5529405/">极乐净土——V家3人</a>
+        </div>
+        <div>
           <a href="http://www.bilibili.com/video/av5598273/">极乐净土——金丝雀旗袍V家</a>
+        </div>
+        <div>
           <a href="http://www.bilibili.com/video/av5648647/">极乐净土——圆神 伊莉雅 小暗 咲夜 克鲁鲁</a>
+        </div>
+        <div>
           <a href="http://www.bilibili.com/video/av5386762/">极乐净土——saber狮子王</a>
        </div>
 
