--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -44,7 +44,7 @@
       <section class="content-section">
 
         <header class="section-header">
-          <h2>番剧推荐</h2>
+          <h2>我们的目标是——没有蛀牙</h2>
         </header>
 
         <!-- Duplicate these resume-item elements and edit accordingly for each job you want to add here -->
@@ -86,7 +86,7 @@
       <section class="content-section">
 
         <header class="section-header">
-          <h2>单身狗の七夕日常</h2>
+          <h2>番剧推荐</h2>
         </header>
 
         <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/CollegeOrUniversity">
@@ -189,7 +189,7 @@
       <section class="content-section">
 
         <header class="section-header">
-          <h2>滑♂稽表情包</h2>
+          <h2>泡面番就留到泡面的时候看吧</h2>
         </header>
 
         <div class="resume-item">
